add css file via upload

--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,16 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #303853;
+    background-color: #e9e4e4;
 	font-family: 'Wendy One', sans-serif;
 	font-size: 1.5em;
 	color: white;
 	text-align: center;
-    background: rgb(48,56,83); /* Old browsers */
-    background: -moz-linear-gradient(top, rgba(48,56,83,1) 0%, rgba(32,38,55,1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, rgba(48,56,83,1) 0%,rgba(32,38,55,1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, rgba(48,56,83,1) 0%,rgba(32,38,55,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#303853', endColorstr='#202637',GradientType=0 ); /* IE6-9 */
+    background: #e9e4e4; /* Old browsers */
+    background: -moz-linear-gradient(top, #e9e4e4 0%, #cccccc 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #e9e4e4 0%,#cccccc 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #e9e4e4 0%,#cccccc 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6dada', endColorstr='#ab9da3',GradientType=0 ); /* IE6-9 */
 }
 
 #game-scene {
@@ -21,7 +21,7 @@ body {
 }
 
 .table {
-    background-color: #645a7e;
+    background-color: #cccccc;
     z-index: 10;
     width: 100%;
     position: fixed;
@@ -30,7 +30,7 @@ body {
 
 #begin-game {
 	width: 200px;
-	background-color: #645a7e;
+	background-color: #FF9494;
 	border-radius: 8px;
     color: #fff;
 	padding: 25px;
@@ -51,7 +51,7 @@ body {
 	position: relative;
 	width: 548px;
 	margin: 0 auto;
-	border: 8px solid #5FCF80;
+	border: 8px solid #FF9494;
 	height: 472px;
 	border-radius: 7px;
 	float: left;
@@ -61,7 +61,7 @@ body {
 
 #game-board-underlay {
     position: absolute;
-	width: 548px;
+    width: 548px;
 	height: 472px;
     box-sizing: border-box;
 	margin: 0 auto;
@@ -112,14 +112,14 @@ circle {
     width: 20px;
     height: 350px;
     margin: 0 auto;
-    background-color: #e59a13;
+    background-color: #d69a9a;
     border-radius: 5px 5px 0px 0px;
 }
 
 .stand-attachment {
     width: 15px;
     height: 20px;
-    background-color: #e59a13;
+    background-color: #d69a9a;
     position: absolute;
     top: 15px;
 }
@@ -134,7 +134,7 @@ circle {
 
 .stand-foot {
     width: 100%;
-    background-color: #e59a13;
+    background-color: #d69a9a;
     height: 20px;
     border-radius: 8px 8px 0px 0px;
     top: 350px;
